Added a new section in index.html in the feature branch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h1>Welcome to My Project</h1>
     <p>This is the first paragraph.</p>
     <p>This is the second paragraph.</p>
+  <section>
+      <h2>New Section</h2>
+      <p>This is a new section added in the feature branch.</p>
+  </section>
 </body>
 </html>
 
